overflow calendar fixed

--- a/src/components/formElement/formElement.scss
+++ b/src/components/formElement/formElement.scss
@@ -8,7 +8,6 @@
     border: 1px solid rgb(var(--TextOnWhite));
     border-radius: 3px;
     padding-bottom: 15px;
-    overflow: hidden;
     box-shadow: inset 2px -2px 6px rgb(var(--white03));
 }
 
